--- a/First_project/First_project/First_project.vcxproj
+++ b/First_project/First_project/First_project.vcxproj
@@ -148,6 +148,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="First_project.cpp" />
+    <ClCompile Include="include.hpp" />
+    <ClCompile Include="Objects.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Classes.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
