--- a/First_project_testy/First_project_testy/First_project_testy.vcxproj
+++ b/First_project_testy/First_project_testy/First_project_testy.vcxproj
@@ -148,11 +148,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="First_project_testy.cpp" />
-    <ClCompile Include="Objects.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Organism.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Classes.h" />
-    <ClInclude Include="includes.h" />
+    <ClInclude Include="Includes.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Organism.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
