--- a/First_project_testy/First_project_testy/First_project_testy.vcxproj.filters
+++ b/First_project_testy/First_project_testy/First_project_testy.vcxproj.filters
@@ -18,16 +18,22 @@
     <ClCompile Include="First_project_testy.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="Objects.cpp">
+    <ClCompile Include="Map.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Organism.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Classes.h">
-      <Filter>Pliki zasobów</Filter>
+    <ClInclude Include="Map.h">
+      <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="includes.h">
-      <Filter>Pliki zasobów</Filter>
+    <ClInclude Include="Includes.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="Organism.h">
+      <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
