--- a/First_project_testy/First_project_testy/First_project_testy.vcxproj
+++ b/First_project_testy/First_project_testy/First_project_testy.vcxproj
@@ -148,10 +148,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="First_project_testy.cpp" />
+    <ClCompile Include="Human.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Organism.cpp" />
+    <ClCompile Include="Sheep.cpp" />
+    <ClCompile Include="Sheep.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Human.h" />
     <ClInclude Include="Includes.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Organism.h" />
